Added credits, license and copyright info

--- a/ViewerMain/PDFViewer/index.html
+++ b/ViewerMain/PDFViewer/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+
+    <!--
+
+      ========}    P D F V I E W E R    {========
+        
+        PDFViewer 4.0.0
+        COPYRIGHT (C) 2024 PRESTON SIA (PRESIA27)
+        THIS SOFTWARE IS LICENSED UNDER THE APACHE LICENSE, VERSION 2.0
+        [https://www.apache.org/licenses/LICENSE-2.0]
+
+        This project utilizes the PDF.js project by Mozilla.
+        PDF.js is licensed under Apache, and Copyright (C) Mozilla and individual contributors.
+        [https://mozilla.github.io/pdf.js/]
+
+    -->
+
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="index.css">
     <!-- Disable page cache -->
