--- a/ViewerMain/PDFViewer/pdfjs/web/viewer.html
+++ b/ViewerMain/PDFViewer/pdfjs/web/viewer.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--
 Copyright 2012 Mozilla Foundation
 
@@ -387,8 +387,9 @@ See https://github.com/adobe-type-tools/cmap-resources
             <h1>About</h1>
             <br><hr><br>
 
-            <h2>PDFViewer 3.0</h2><br>
-            <p>Preston Solutions Inc.</p>
+            <h2>PDFViewer 4.0.0</h2><br>
+            <p>Preston Sia (presia27) - (Main) Public Release</p>
+            <p>PDFViewer is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" style="color: white;">Apache License Version 2.0</a></p>
 
             <br><div class="horizontalToolbarSeparator spreadModeButtons"></div><br>
 
